# motor_encoder_gazebo_plugin

./: CMakeLists.txt  LICENSE  README.md  gazebo_ros_control_plugins.xml  install.xml  package.xml  turret_parameters.cpp
action/: TurretControl.action
include/gazebo_ros_control/: acceleration_profiles.hpp  action_server.hpp  angle_utils.hpp  trajectory_calculator.hpp  turret_control_config.hpp  turret_control_plugin.hpp
src/: acceleration_profiles.cpp  action_server.cpp  angle_utils.cpp  trajectory_calculator.cpp  turret_control_plugin.cpp  turret_parameters.cpp
